Fixed some roman numerals I previously missed.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -343,7 +343,7 @@
 					<p><i xml:lang="la">Salus</i>: Safety, worshipped as a goddess. The <i xml:lang="la">augurium Salutis</i> was an inquiry whether prayers might be offered for the welfare of the State. It could be made only in time of peace. See also Dio, <i epub:type="se:name.publication.book">Roman History</i> 37.24. <a href="book-2.xhtml#noteref-111" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-112" epub:type="endnote">
-					<p><i xml:lang="la">Exigere</i> is the technical term for making weights and measures correspond with the standards in charge of the aediles; see <span epub:type="z3998:roman">CIL</span> <span epub:type="z3998:roman">XIV</span>.4124.1, 2; <span epub:type="z3998:roman">X</span>.8067.2; <abbr>etc.</abbr> <a href="book-2.xhtml#noteref-112" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Exigere</i> is the technical term for making weights and measures correspond with the standards in charge of the aediles; see CIL <span epub:type="z3998:roman">XIV</span>.4124.1, 2; <span epub:type="z3998:roman">X</span>.8067.2; <abbr>etc.</abbr> <a href="book-2.xhtml#noteref-112" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-113" epub:type="endnote">
 					<p>According to Richter, <i epub:type="se:name.publication.book">Topographie von Rom</i>, p229, the <i xml:lang="la">regia</i> was the main door, leading from the stage of the theatre to the colonnade. <a href="book-2.xhtml#noteref-113" epub:type="backlink">↩</a></p>
@@ -1102,7 +1102,7 @@
 					<p><abbr>Cf.</abbr> <a href="book-2.xhtml#book-2-35-2">Augustus, 35.2</a>. <a href="book-4.xhtml#noteref-364" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-365" epub:type="endnote">
-					<p>See <a href="book-2.xhtml#book-2-28">Augustus, 28.1</a> and <a href="book-2.xhtml#book-2-101-4"><span epub:type="z3998:roman">CI</span>.4</a>. <a href="book-4.xhtml#noteref-365" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-2.xhtml#book-2-28">Augustus, 28.1</a> and <a href="book-2.xhtml#book-2-101-4">101.4</a>. <a href="book-4.xhtml#noteref-365" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-366" epub:type="endnote">
 					<p><i xml:lang="la">Ducentesimam</i> (<abbr>sc.</abbr> <i xml:lang="la">partem</i>), one half of one percent. <a href="book-4.xhtml#noteref-366" epub:type="backlink">↩</a></p>
@@ -1225,7 +1225,7 @@
 					<p>The <i xml:lang="la">popa</i> knocked down the victim with a mallet or with the back of an axe-head, and the <i xml:lang="la">cultrarius</i> then cut the animal’s throat. <a href="book-4.xhtml#noteref-405" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-406" epub:type="endnote">
-					<p>Literally, “the cords,” as an instrument of torture; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-62-2">Tiberius, 62.2</a>. On the whole passage <abbr>cf.</abbr> <a href="book-4.xhtml#book-4-25-3">Caligula, 25.3</a> and <a href="book-4.xhtml#book-4-50" epub:type="z3998:roman">L</a>.2. <a href="book-4.xhtml#noteref-406" epub:type="backlink">↩</a></p>
+					<p>Literally, “the cords,” as an instrument of torture; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-62-2">Tiberius, 62.2</a>. On the whole passage <abbr>cf.</abbr> <a href="book-4.xhtml#book-4-25-3">Caligula, 25.3</a> and <a href="book-4.xhtml#book-4-50">50</a>.2. <a href="book-4.xhtml#noteref-406" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-407" epub:type="endnote">
 					<p>See <a href="book-4.xhtml#book-4-26">Caligula, 26.1</a>. <a href="book-4.xhtml#noteref-407" epub:type="backlink">↩</a></p>
@@ -1441,7 +1441,7 @@
 					<p>Gaius appointed a number of consuls at once, who drew lots for the year when they were to hold the office. <a href="book-5.xhtml#noteref-477" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-478" epub:type="endnote">
-					<p>See <a href="book-4.xhtml#book-4-8">Caligula, 8.1</a> and <a href="book-4.xhtml#book-4-24-3"><span epub:type="z3998:roman">XXIV</span>.3</a>. <a href="book-5.xhtml#noteref-478" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-4.xhtml#book-4-8">Caligula, 8.1</a> and <a href="book-4.xhtml#book-4-24-3">24.3</a>. <a href="book-5.xhtml#noteref-478" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-479" epub:type="endnote">
 					<p>The Rhine. <a href="book-5.xhtml#noteref-479" epub:type="backlink">↩</a></p>
@@ -1729,7 +1729,7 @@
 					<p>That is, as his executor. The maker of a will chose a man to whom he made a symbolic sale (<i xml:lang="la">per aes et librum</i>; see <a href="book-2.xhtml#book-2-64">Augustus, 64.1</a>) of all his goods in the presence of witnesses. The purchaser then made the designated payments to the heirs and legatees. <a href="book-6.xhtml#noteref-573" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-574" epub:type="endnote">
-					<p><a href="book-2.xhtml#book-2-64">Augustus, 64</a> and <a href="book-2.xhtml#book-2-65" epub:type="z3998:roman">LXV</a>. <a href="book-6.xhtml#noteref-574" epub:type="backlink">↩</a></p>
+					<p><a href="book-2.xhtml#book-2-64">Augustus, 64</a> and <a href="book-2.xhtml#book-2-65">65</a>. <a href="book-6.xhtml#noteref-574" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-575" epub:type="endnote">
 					<p>Gouging out the eyes seems to have been a favourite mode of attack among the Italians; <abbr>cf.</abbr> <a href="book-2.xhtml#book-2-27-4">Augustus, 27.4</a>, <a href="book-6.xhtml#book-6-26-2">Nero, 26.2</a>, and the frequent allusions in comedy. <a href="book-6.xhtml#noteref-575" epub:type="backlink">↩</a></p>
@@ -2236,7 +2236,7 @@
 					<p>Either Suetonius is in error or the manuscripts; the name should be Gnaeus. <a href="book-7.xhtml#noteref-742" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-743" epub:type="endnote">
-					<p>See <a href="book-4.xhtml#book-4-43">Caligula, 43</a> and <a href="book-4.xhtml#book-4-44" epub:type="z3998:roman">XLIV</a>. <a href="book-7.xhtml#noteref-743" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-4.xhtml#book-4-43">Caligula, 43</a> and <a href="book-4.xhtml#book-4-44">44</a>. <a href="book-7.xhtml#noteref-743" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-744" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <a href="book-4.xhtml#book-4-26-2">Caligula, 26.2</a>. <a href="book-7.xhtml#noteref-744" epub:type="backlink">↩</a></p>
@@ -2356,7 +2356,7 @@
 					<p>Like Maecenas, Otho was <i xml:lang="la">Tyrrhena regum progenies</i>; Horace <i epub:type="se:name.publication.book">Odes</i>, 3.29.1. <a href="book-7.xhtml#noteref-782" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-783" epub:type="endnote">
-					<p>See <a href="book-5.xhtml#book-5-13">Claudius, 13</a> and <a href="book-5.xhtml#book-5-35-2"><span epub:type="z3998:roman">XXXV</span>.2</a>. <a href="book-7.xhtml#noteref-783" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-5.xhtml#book-5-13">Claudius, 13</a> and <a href="book-5.xhtml#book-5-35-2">35.2</a>. <a href="book-7.xhtml#noteref-783" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-784" epub:type="endnote">
 					<p>Suetonius does not mention this among the conspiracies against Claudius; see <a href="book-5.xhtml#book-5-13">Claudius, 13</a>. <a href="book-7.xhtml#noteref-784" epub:type="backlink">↩</a></p>
@@ -2422,7 +2422,7 @@
 					<p>See <a href="book-3.xhtml#book-3-43">Tiberius, 43.1</a>. <a href="book-7.xhtml#noteref-804" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-805" epub:type="endnote">
-					<p>See <a href="book-6.xhtml#book-6-12-3">Nero, 12.3</a> and <a href="book-6.xhtml#book-6-21" epub:type="z3998:roman">XXI</a>. <a href="book-7.xhtml#noteref-805" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-6.xhtml#book-6-12-3">Nero, 12.3</a> and <a href="book-6.xhtml#book-6-21">21</a>. <a href="book-7.xhtml#noteref-805" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-806" epub:type="endnote">
 					<p>A faction in the Circus; see note on <a href="book-4.xhtml#book-4-55-2">Caligula, 55.2</a>. <a href="book-7.xhtml#noteref-806" epub:type="backlink">↩</a></p>
@@ -2503,7 +2503,7 @@
 					<p>The <i xml:lang="la">anteambulo</i> was the client who walked before his patron on the street and compelled people to make way for him; <abbr>cf.</abbr> <i epub:type="se:name.publication.book">Epigrams of Martial</i> 2.18.5, <i xml:lang="la">tumidique anteambulo regis</i>, where <i xml:lang="la">regis</i> means “patron,” as in Horace <i epub:type="se:name.publication.book">Epistles</i> 1.17.43 and elsewhere. <a href="book-8.xhtml#noteref-831" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-832" epub:type="endnote">
-					<p>See <a href="book-4.xhtml#book-4-48">Caligula, 48</a> and <a href="book-4.xhtml#book-4-49" epub:type="z3998:roman">XLIX</a>. <a href="book-8.xhtml#noteref-832" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-4.xhtml#book-4-48">Caligula, 48</a> and <a href="book-4.xhtml#book-4-49">49</a>. <a href="book-8.xhtml#noteref-832" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-833" epub:type="endnote">
 					<p>Lepidus and Gaetulicus; see <a href="book-5.xhtml#book-5-9">Claudius, 9.1</a>. <a href="book-8.xhtml#noteref-833" epub:type="backlink">↩</a></p>
@@ -2689,7 +2689,7 @@
 					<p>Various quarters and streets of the city were designated in this way; <abbr>cf.</abbr> <i xml:lang="la">ad Capita Bubula</i>, <a href="book-2.xhtml#book-2-5">Augustus, 5</a>; <i xml:lang="la">ad Pirum</i>, <i epub:type="se:name.publication.book">Epigrams of Martial</i> 1.117.6. <i xml:lang="la">Ad Malum Punicum</i> was a street on the Quirinal hill, probably corresponding with the modern Via delle Quattro Fontane; see Platner, <i>Topography of Rome</i>, p485. <a href="book-8.xhtml#noteref-893" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-894" epub:type="endnote">
-					<p><abbr>Cf.</abbr> <i>Otho</i>, <a href="book-7.xhtml#book-7-2-12"><span epub:type="z3998:roman">XII</span>.1</a>, at the end. <a href="book-8.xhtml#noteref-894" epub:type="backlink">↩</a></p>
+					<p><abbr>Cf.</abbr> <a href="book-7.xhtml#book-7-2-12">Otho, 12.1</a>, at the end. <a href="book-8.xhtml#noteref-894" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-895" epub:type="endnote">
 					<p>See note on <a href="book-7.xhtml#book-7-1-1">Galba, 1</a>. <a href="book-8.xhtml#noteref-895" epub:type="backlink">↩</a></p>
@@ -2716,7 +2716,7 @@
 					<p>Titus had the ability to do this; <abbr>cf.</abbr> <a href="book-8.xhtml#book-8-2-3-2">Titus, 3.2</a>, at the end. <a href="book-8.xhtml#noteref-902" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-903" epub:type="endnote">
-					<p>See <a href="book-8.xhtml#book-8-3-9">Domitian, 9</a> and <a href="book-8.xhtml#book-8-3-11"><span epub:type="z3998:roman">XI</span>.1</a>. <a href="book-8.xhtml#noteref-903" epub:type="backlink">↩</a></p>
+					<p>See <a href="book-8.xhtml#book-8-3-9">Domitian, 9</a> and <a href="book-8.xhtml#book-8-3-11">11.1</a>. <a href="book-8.xhtml#noteref-903" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-904" epub:type="endnote">
 					<p>See note on <a href="book-8.xhtml#book-8-1-9">Vespasian, 9.1</a>. <a href="book-8.xhtml#noteref-904" epub:type="backlink">↩</a></p>
