--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -127,7 +127,7 @@
 					<p>Plebeians, connected in some way with the treasury. <a href="book-1.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="endnote">
-					<p><abbr>i.e.</abbr>, of the commons, with reference to the distribution of grain. <a href="book-1.xhtml#noteref-40" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr>, of the commons, with reference to the distribution of grain. <a href="book-1.xhtml#noteref-40" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-41" epub:type="endnote">
 					<p>The derivation of <i xml:lang="la">parricida</i> is uncertain, but it cannot come from <i xml:lang="la">pater</i> and <i xml:lang="la">caedo</i>. In early times it meant wilful murder of a freeman; Lex <span epub:type="z3998:roman">XII</span> <abbr>Tab.</abbr> <abbr>ap.</abbr> <abbr>Fest.</abbr> <abbr>s.v.</abbr>, <i xml:lang="la">si qui hominem liberum dolo sciens morti duit, paricidas esto</i>; later, it was associated by popular etymology with <i xml:lang="la">pater</i> and <i xml:lang="la">caedo</i>, and used also in the modern sense of the word. <a href="book-1.xhtml#noteref-41" epub:type="backlink">↩</a></p>
@@ -268,7 +268,7 @@
 					<p>According to the <i epub:type="se:name.publication.book">Thesaurus Linguae Latinae</i> <abbr>s.v.</abbr> <i xml:lang="la">collybus</i>, Suetonius misunderstood Cassius, who used <i xml:lang="la">collybus</i> of a kind of cake. <a href="book-2.xhtml#noteref-86" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-87" epub:type="endnote">
-					<p><abbr>i.e.</abbr> Hadrian. <a href="book-2.xhtml#noteref-87" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr> Hadrian. <a href="book-2.xhtml#noteref-87" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-88" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Annales</i>, 502, Vahlen. <a href="book-2.xhtml#noteref-88" epub:type="backlink">↩</a></p>
@@ -658,7 +658,7 @@
 					<p>The decree was not complete until this was done; <abbr>cf.</abbr> <a href="book-1.xhtml#book-1-28-3">Julius, 28.3</a>. <a href="book-2.xhtml#noteref-216" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-217" epub:type="endnote">
-					<p><abbr>i.e.</abbr> “Discourses about the Gods.” Aristotle wrote a work with the same title. <a href="book-2.xhtml#noteref-217" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr> “Discourses about the Gods.” Aristotle wrote a work with the same title. <a href="book-2.xhtml#noteref-217" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-218" epub:type="endnote">
 					<p>The <i xml:lang="la">genius</i>, or familiar spirit (see note on <a href="book-2.xhtml#book-2-60">Augustus, 60</a>), was often represented by a serpent, and those of husband and wife by two serpents; <abbr>e.g.</abbr> in Pompeian frescoes. <a href="book-2.xhtml#noteref-218" epub:type="backlink">↩</a></p>
@@ -706,7 +706,7 @@
 					<p>Beneventum; <a href="book-2.xhtml#book-2-97-3">Augustus, 97.3</a>. <a href="book-2.xhtml#noteref-232" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-233" epub:type="endnote">
-					<p><abbr>i.e.</abbr> open through weakness. <a href="book-2.xhtml#noteref-233" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr> open through weakness. <a href="book-2.xhtml#noteref-233" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-234" epub:type="endnote">
 					<p>Or closed. <a href="book-2.xhtml#noteref-234" epub:type="backlink">↩</a></p>
@@ -784,7 +784,7 @@
 					<p>Transalpine Gaul was called <i xml:lang="la">Comata</i>, “long-haired.” The southern part was called <i xml:lang="la">Braccata</i>, “breeches-wearing,” and Cisalpine Gaul, <i xml:lang="la">Togata</i>. <a href="book-3.xhtml#noteref-258" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-259" epub:type="endnote">
-					<p><abbr>i.e.</abbr> celebrating a <i xml:lang="la">iustum triumphum</i>; see note on <a href="book-2.xhtml#book-2-22">Augustus, 22</a>, and <abbr>cf.</abbr> Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.121. For a different version see Dio, 54.31. <a href="book-3.xhtml#noteref-259" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr> celebrating a <i xml:lang="la">iustum triumphum</i>; see note on <a href="book-2.xhtml#book-2-22">Augustus, 22</a>, and <abbr>cf.</abbr> Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.121. For a different version see Dio, 54.31. <a href="book-3.xhtml#noteref-259" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-260" epub:type="endnote">
 					<p>Since he was quaestor in 23 <abbr class="era">BC</abbr> and consul for the first time in 13 <abbr class="era">BC</abbr>, <i xml:lang="la">paene iunctim</i> is used loosely, to indicate a general disregard of the ages required for the various offices and the prescribed intervals. <a href="book-3.xhtml#noteref-260" epub:type="backlink">↩</a></p>
@@ -1369,7 +1369,7 @@
 					<p>With which they carried his litter. <a href="book-4.xhtml#noteref-453" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-454" epub:type="endnote">
-					<p>Gaius Julius Caesar Strabo, slain in 87 <abbr class="era">BC</abbr> But the Dictator’s father died a natural death, as did also Gaius Caesar, grandson of Augustus; see <a href="book-2.xhtml#book-2-65">Augustus, 65.1</a>. <a href="book-4.xhtml#noteref-454" epub:type="backlink">↩</a></p>
+					<p>Gaius Julius Caesar Strabo, slain in 87 <abbr class="era">BC</abbr>. But the Dictator’s father died a natural death, as did also Gaius Caesar, grandson of Augustus; see <a href="book-2.xhtml#book-2-65">Augustus, 65.1</a>. <a href="book-4.xhtml#noteref-454" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-455" epub:type="endnote">
 					<p>See <a href="book-2.xhtml#book-2-62-2">Augustus, 62.2</a>. <a href="book-5.xhtml#noteref-455" epub:type="backlink">↩</a></p>
@@ -1687,7 +1687,7 @@
 					<p>See <a href="book-1.xhtml#book-1-20">Julius, 20.1</a>, at the beginning. <a href="book-5.xhtml#noteref-559" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-560" epub:type="endnote">
-					<p><abbr>i.e.</abbr> in Greek; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-71">Tiberius, 71</a>. <a href="book-5.xhtml#noteref-560" epub:type="backlink">↩</a></p>
+					<p><abbr>I.e.</abbr> in Greek; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-71">Tiberius, 71</a>. <a href="book-5.xhtml#noteref-560" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-561" epub:type="endnote">
 					<p>Referring to the cohort on guard at the Palace; <abbr>cf.</abbr> <a href="book-5.xhtml#book-5-10">Claudius, 10</a>. <a href="book-5.xhtml#noteref-561" epub:type="backlink">↩</a></p>
