Add 'Book' to chapter titles

--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-3" epub:type="chapter">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">III</span>
+				<span>Book <span epub:type="z3998:roman">III</span></span>
 				<span epub:type="subtitle">Tiberius</span>
 			</h2>
 			<ol>
