--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-7" epub:type="part">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">VII</span>
+				<span>Book <span epub:type="z3998:roman">VII</span></span>
 				<span epub:type="subtitle">Galba⁠—Otho⁠—Vitellius</span>
 			</h2>
 			<section id="book-7-1" epub:type="chapter">
