--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-8" epub:type="part">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">VIII</span>
+				<span>Book <span epub:type="z3998:roman">VIII</span></span>
 				<span epub:type="subtitle">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</span>
 			</h2>
 			<section id="book-8-1" epub:type="chapter">
