--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-1" epub:type="chapter">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">I</span>
+				<span>Book <span epub:type="z3998:roman">I</span></span>
 				<span epub:type="subtitle">The Deified Julius</span>
 			</h2>
 			<ol>
