--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-2" epub:type="chapter">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">II</span>
+				<span>Book <span epub:type="z3998:roman">II</span></span>
 				<span epub:type="subtitle">The Deified Augustus</span>
 			</h2>
 			<ol>
