--- a/src/epub/text/book-4.xhtml
+++ b/src/epub/text/book-4.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-4" epub:type="chapter">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">IV</span>
+				<span>Book <span epub:type="z3998:roman">IV</span></span>
 				<span epub:type="subtitle">Gaius Caligula</span>
 			</h2>
 			<ol>
