--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-5" epub:type="chapter">
 			<h2 epub:type="title">
-				<span epub:type="z3998:roman">V</span>
+				<span>Book <span epub:type="z3998:roman">V</span></span>
 				<span epub:type="subtitle">The Deified Claudius</span>
 			</h2>
 			<ol>
