--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,25 +14,25 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/book-1.xhtml"><span epub:type="z3998:roman">I</span>: The Deified Julius</a>
+					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
 				</li>
 				<li>
-					<a href="text/book-2.xhtml"><span epub:type="z3998:roman">II</span>: The Deified Augustus</a>
+					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
 				</li>
 				<li>
-					<a href="text/book-3.xhtml"><span epub:type="z3998:roman">III</span>: Tiberius</a>
+					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
 				</li>
 				<li>
-					<a href="text/book-4.xhtml"><span epub:type="z3998:roman">IV</span>: Gaius Caligula</a>
+					<a href="text/book-4.xhtml">Book <span epub:type="z3998:roman">IV</span></a>
 				</li>
 				<li>
-					<a href="text/book-5.xhtml"><span epub:type="z3998:roman">V</span>: The Deified Claudius</a>
+					<a href="text/book-5.xhtml">Book <span epub:type="z3998:roman">V</span></a>
 				</li>
 				<li>
-					<a href="text/book-6.xhtml"><span epub:type="z3998:roman">VI</span>: Nero</a>
+					<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span></a>
 				</li>
 				<li>
-					<a href="text/book-7.xhtml"><span epub:type="z3998:roman">VII</span>: Galba⁠—Otho⁠—Vitellius</a>
+					<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span>: Galba⁠—Otho⁠—Vitellius</a>
 					<ol>
 						<li>
 							<a href="text/book-7.xhtml#book-7-1">Galba</a>
@@ -46,7 +46,7 @@
 					</ol>
 				</li>
 				<li>
-					<a href="text/book-8.xhtml"><span epub:type="z3998:roman">VIII</span>: The Deified Vespasian⁠—The Deified Titus⁠—Domitian</a>
+					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span>: The Deified Vespasian⁠—The Deified Titus⁠—Domitian</a>
 					<ol>
 						<li>
 							<a href="text/book-8.xhtml#book-8-1">The Deified Vespasian</a>
