--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -33,7 +33,7 @@
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
-			<a>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></a><br/>
+			<b>October 25, 2019, 9:06 <abbr class="time eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/suetonius/the-lives-of-the-caesars/j-c-rolfe">standardebooks.org/ebooks/suetonius/the-lives-of-the-caesars/j-c-rolfe</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
