--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced by<br/>
-			<a href="http://penelope.uchicago.edu/Thayer/E/home.html" class="name">Bill Thayer</a><br/>
+			<a href="http://penelope.uchicago.edu/Thayer/E/home.html">Bill Thayer</a><br/>
 			and on digital scans available at the<br/>
 			<a href="https://archive.org/details/L031SuetoniusTheLivesOfTheCaesarsI/page/n1">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
