--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -79,7 +79,7 @@
 					<p>A Celtic word meaning a crested lark, (Pliny, <i epub:type="se:name.publication.book">Natural History</i> 11.37) which was the device on the helmets of the legion. <a href="book-1.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p>Roman measure; about 3106 English miles, taking the Roman foot (296 mm) as 0.97 English. <a href="book-1.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+					<p>Roman measure; about 3106 English miles, taking the Roman foot (296 <abbr>mm</abbr>) as 0.97 English. <a href="book-1.xhtml#noteref-24" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-25" epub:type="endnote">
 					<p><i xml:lang="la">Sestertius</i>: A Roman coin, originally of silver, but later of bronze, equal to 2½ <i xml:lang="la">asses</i>, or one-fourth of a <i xml:lang="la">denarius</i>. It was equal to 2½<abbr>d.</abbr> or 5 cents, and is the unit in which sums of money were most commonly reckoned by the Romans. <a href="book-1.xhtml#noteref-25" epub:type="backlink">↩</a></p>
@@ -835,7 +835,7 @@
 					<p><i epub:type="se:name.publication.book">Iliad</i>, 10.246 f. <a href="book-3.xhtml#noteref-275" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-276" epub:type="endnote">
-					<p>A Greek proverb; <abbr>cf.</abbr> Terence <i epub:type="se:name.publication.book">Phormio</i> 506 and Donatus, <i>ad. loc.</i> <a href="book-3.xhtml#noteref-276" epub:type="backlink">↩</a></p>
+					<p>A Greek proverb; <abbr>cf.</abbr> Terence <i epub:type="se:name.publication.book">Phormio</i> 506 and Donatus, <i xml:lang="la"><abbr>ad.</abbr> <abbr class="eoc">loc.</abbr></i> <a href="book-3.xhtml#noteref-276" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-277" epub:type="endnote">
 					<p>The <i xml:lang="la">secespita</i>, or sacrificial knife, had a long, sharp point and a double edge, with an ivory handle ornamented with gold and silver. <a href="book-3.xhtml#noteref-277" epub:type="backlink">↩</a></p>
@@ -1864,7 +1864,7 @@
 					<p>Of Corinth; <abbr>cf.</abbr> <a href="book-1.xhtml#book-1-44-3">Julius, 44.3</a>. <a href="book-6.xhtml#noteref-618" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-619" epub:type="endnote">
-					<p>Roman measure; a little under 5ft. 10in. English. <a href="book-6.xhtml#noteref-619" epub:type="backlink">↩</a></p>
+					<p>Roman measure; a little under 5 <abbr>ft.</abbr> 10 <abbr>in.</abbr> English. <a href="book-6.xhtml#noteref-619" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-620" epub:type="endnote">
 					<p><abbr>Cf.</abbr> Gellius, <i epub:type="se:name.publication.book">Noctes Atticae</i> 13.31.3. <a href="book-6.xhtml#noteref-620" epub:type="backlink">↩</a></p>
