Add semantics to i.e. and e.g.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -127,7 +127,7 @@
 					<p>Plebeians, connected in some way with the treasury. <a href="book-1.xhtml#noteref-39" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-40" epub:type="endnote">
-					<p><abbr>I.e.</abbr>, of the commons, with reference to the distribution of grain. <a href="book-1.xhtml#noteref-40" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr>, of the commons, with reference to the distribution of grain. <a href="book-1.xhtml#noteref-40" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-41" epub:type="endnote">
 					<p>The derivation of <i xml:lang="la">parricida</i> is uncertain, but it cannot come from <i xml:lang="la">pater</i> and <i xml:lang="la">caedo</i>. In early times it meant wilful murder of a freeman; Lex <span epub:type="z3998:roman">XII</span> <abbr>Tab.</abbr> <abbr>ap.</abbr> <abbr>Fest.</abbr> <abbr>s.v.</abbr>, <i xml:lang="la">si qui hominem liberum dolo sciens morti duit, paricidas esto</i>; later, it was associated by popular etymology with <i xml:lang="la">pater</i> and <i xml:lang="la">caedo</i>, and used also in the modern sense of the word. <a href="book-1.xhtml#noteref-41" epub:type="backlink">↩</a></p>
@@ -259,7 +259,7 @@
 					<p>Quintus Cicero was really <i xml:lang="la">propraetor</i>; see note on <a href="book-1.xhtml#book-1-54">Julius, 54.1</a>. <a href="book-2.xhtml#noteref-83" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-84" epub:type="endnote">
-					<p><i xml:lang="la">Imagines</i> were waxen masks of ancestors of noble (<abbr>i.e.</abbr>, senatorial) rank, kept in the hall (<i xml:lang="la">atrium</i>) of their descendants. <a href="book-2.xhtml#noteref-84" epub:type="backlink">↩</a></p>
+					<p><i xml:lang="la">Imagines</i> were waxen masks of ancestors of noble (<abbr class="initialism">i.e.</abbr>, senatorial) rank, kept in the hall (<i xml:lang="la">atrium</i>) of their descendants. <a href="book-2.xhtml#noteref-84" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-85" epub:type="endnote">
 					<p>See <a href="book-1.xhtml#book-1-20-3">Julius, 20.3</a>, note. <a href="book-2.xhtml#noteref-85" epub:type="backlink">↩</a></p>
@@ -268,7 +268,7 @@
 					<p>According to the <i epub:type="se:name.publication.book">Thesaurus Linguae Latinae</i> <abbr>s.v.</abbr> <i xml:lang="la">collybus</i>, Suetonius misunderstood Cassius, who used <i xml:lang="la">collybus</i> of a kind of cake. <a href="book-2.xhtml#noteref-86" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-87" epub:type="endnote">
-					<p><abbr>I.e.</abbr> Hadrian. <a href="book-2.xhtml#noteref-87" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr> Hadrian. <a href="book-2.xhtml#noteref-87" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-88" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Annales</i>, 502, Vahlen. <a href="book-2.xhtml#noteref-88" epub:type="backlink">↩</a></p>
@@ -421,7 +421,7 @@
 					<p>The auditorium was divided horizontally into three parts: <i xml:lang="la">ima</i> (<i xml:lang="la">prima</i>), <i xml:lang="la">media</i>, and <i xml:lang="la">summa</i> (<i xml:lang="la">ultima</i>) <i xml:lang="la">cavea</i>. <a href="book-2.xhtml#noteref-137" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-138" epub:type="endnote">
-					<p>This puzzling statement is thus explained by Baumgarten-Crusius: “<abbr>i.e.</abbr> <i xml:lang="la">ex aedibus proxime adjacentibus, unde prospectus erat in Circum. Coenacula autem in summis aedibus esse solebant. Idem narrat Dio 57.11 de Tiberio:</i> <span xml:lang="grc">τοὺς τῶν ἵππων ἀγῶνας ἐξ οἰκίας καὶ αὐτὸς τῶν ἀπελευθέρων τινὸς πολλάκις ἑώρα</span>.” <a href="book-2.xhtml#noteref-138" epub:type="backlink">↩</a></p>
+					<p>This puzzling statement is thus explained by Baumgarten-Crusius: “<abbr class="initialism">i.e.</abbr> <i xml:lang="la">ex aedibus proxime adjacentibus, unde prospectus erat in Circum. Coenacula autem in summis aedibus esse solebant. Idem narrat Dio 57.11 de Tiberio:</i> <span xml:lang="grc">τοὺς τῶν ἵππων ἀγῶνας ἐξ οἰκίας καὶ αὐτὸς τῶν ἀπελευθέρων τινὸς πολλάκις ἑώρα</span>.” <a href="book-2.xhtml#noteref-138" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-139" epub:type="endnote">
 					<p><i xml:lang="la">Pulvinar</i> was originally a sacred couch for a god. The honour was given to Julius Caesar (see <a href="book-1.xhtml#book-1-76">Julius, 76.1</a>) and the term was later applied, as here, to the place reserved for the emperor and his family; <abbr>cf.</abbr> <a href="book-5.xhtml#book-5-4-3">Claudius, 4.3</a>. <a href="book-2.xhtml#noteref-139" epub:type="backlink">↩</a></p>
@@ -658,10 +658,10 @@
 					<p>The decree was not complete until this was done; <abbr>cf.</abbr> <a href="book-1.xhtml#book-1-28-3">Julius, 28.3</a>. <a href="book-2.xhtml#noteref-216" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-217" epub:type="endnote">
-					<p><abbr>I.e.</abbr> “Discourses about the Gods.” Aristotle wrote a work with the same title. <a href="book-2.xhtml#noteref-217" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr> “Discourses about the Gods.” Aristotle wrote a work with the same title. <a href="book-2.xhtml#noteref-217" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-218" epub:type="endnote">
-					<p>The <i xml:lang="la">genius</i>, or familiar spirit (see note on <a href="book-2.xhtml#book-2-60">Augustus, 60</a>), was often represented by a serpent, and those of husband and wife by two serpents; <abbr>e.g.</abbr> in Pompeian frescoes. <a href="book-2.xhtml#noteref-218" epub:type="backlink">↩</a></p>
+					<p>The <i xml:lang="la">genius</i>, or familiar spirit (see note on <a href="book-2.xhtml#book-2-60">Augustus, 60</a>), was often represented by a serpent, and those of husband and wife by two serpents; <abbr class="initialism">e.g.</abbr> in Pompeian frescoes. <a href="book-2.xhtml#noteref-218" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-219" epub:type="endnote">
 					<p>To avoid profanation of the sacred rites. <a href="book-2.xhtml#noteref-219" epub:type="backlink">↩</a></p>
@@ -706,7 +706,7 @@
 					<p>Beneventum; <a href="book-2.xhtml#book-2-97-3">Augustus, 97.3</a>. <a href="book-2.xhtml#noteref-232" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-233" epub:type="endnote">
-					<p><abbr>I.e.</abbr> open through weakness. <a href="book-2.xhtml#noteref-233" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr> open through weakness. <a href="book-2.xhtml#noteref-233" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-234" epub:type="endnote">
 					<p>Or closed. <a href="book-2.xhtml#noteref-234" epub:type="backlink">↩</a></p>
@@ -784,7 +784,7 @@
 					<p>Transalpine Gaul was called <i xml:lang="la">Comata</i>, “long-haired.” The southern part was called <i xml:lang="la">Braccata</i>, “breeches-wearing,” and Cisalpine Gaul, <i xml:lang="la">Togata</i>. <a href="book-3.xhtml#noteref-258" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-259" epub:type="endnote">
-					<p><abbr>I.e.</abbr> celebrating a <i xml:lang="la">iustum triumphum</i>; see note on <a href="book-2.xhtml#book-2-22">Augustus, 22</a>, and <abbr>cf.</abbr> Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.121. For a different version see Dio, 54.31. <a href="book-3.xhtml#noteref-259" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr> celebrating a <i xml:lang="la">iustum triumphum</i>; see note on <a href="book-2.xhtml#book-2-22">Augustus, 22</a>, and <abbr>cf.</abbr> Velleius Paterculus, <i epub:type="se:name.publication.book">Historiae Romanae</i> 2.121. For a different version see Dio, 54.31. <a href="book-3.xhtml#noteref-259" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-260" epub:type="endnote">
 					<p>Since he was quaestor in 23 <abbr class="era">BC</abbr> and consul for the first time in 13 <abbr class="era">BC</abbr>, <i xml:lang="la">paene iunctim</i> is used loosely, to indicate a general disregard of the ages required for the various offices and the prescribed intervals. <a href="book-3.xhtml#noteref-260" epub:type="backlink">↩</a></p>
@@ -1363,7 +1363,7 @@
 					<p>The actors <i xml:lang="la">secundarum partium</i> entertained the spectators after a play by imitating the actions of the star. <a href="book-4.xhtml#noteref-451" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-452" epub:type="endnote">
-					<p>Another formula “Receive the fulfilment of your omen,” <abbr>i.e.</abbr>, in naming Jupiter, the god of the thunderbolt and sudden death. “<i xml:lang="la">Qui legendum vidit <em>iratum</em>, verum vidit: hoc est aliquid Latine dicere, cum alterum nihil sit</i>” Gronovius. <a href="book-4.xhtml#noteref-452" epub:type="backlink">↩</a></p>
+					<p>Another formula “Receive the fulfilment of your omen,” <abbr class="initialism">i.e.</abbr>, in naming Jupiter, the god of the thunderbolt and sudden death. “<i xml:lang="la">Qui legendum vidit <em>iratum</em>, verum vidit: hoc est aliquid Latine dicere, cum alterum nihil sit</i>” Gronovius. <a href="book-4.xhtml#noteref-452" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-453" epub:type="endnote">
 					<p>With which they carried his litter. <a href="book-4.xhtml#noteref-453" epub:type="backlink">↩</a></p>
@@ -1687,7 +1687,7 @@
 					<p>See <a href="book-1.xhtml#book-1-20">Julius, 20.1</a>, at the beginning. <a href="book-5.xhtml#noteref-559" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-560" epub:type="endnote">
-					<p><abbr>I.e.</abbr> in Greek; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-71">Tiberius, 71</a>. <a href="book-5.xhtml#noteref-560" epub:type="backlink">↩</a></p>
+					<p><abbr class="initialism">I.e.</abbr> in Greek; <abbr>cf.</abbr> <a href="book-3.xhtml#book-3-71">Tiberius, 71</a>. <a href="book-5.xhtml#noteref-560" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-561" epub:type="endnote">
 					<p>Referring to the cohort on guard at the Palace; <abbr>cf.</abbr> <a href="book-5.xhtml#book-5-10">Claudius, 10</a>. <a href="book-5.xhtml#noteref-561" epub:type="backlink">↩</a></p>
@@ -1705,7 +1705,7 @@
 					<p>The northern spur of the Capitoline Hill. <a href="book-5.xhtml#noteref-565" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-566" epub:type="endnote">
-					<p>The formula was “<i xml:lang="la">Di meliora</i> (<i xml:lang="la">duint</i>)!” “May the Gods grant better things,” <abbr>i.e.</abbr> “the Gods forbid!” <a href="book-5.xhtml#noteref-566" epub:type="backlink">↩</a></p>
+					<p>The formula was “<i xml:lang="la">Di meliora</i> (<i xml:lang="la">duint</i>)!” “May the Gods grant better things,” <abbr class="initialism">i.e.</abbr> “the Gods forbid!” <a href="book-5.xhtml#noteref-566" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-567" epub:type="endnote">
 					<p>The youths were Castor and Pollux, and the victory that at Lake Regillus, in 498 <abbr class="era">BC</abbr>, according to the traditional chronology. <a href="book-6.xhtml#noteref-567" epub:type="backlink">↩</a></p>
@@ -1873,7 +1873,7 @@
 					<p>It collapsed in consequence, but not until the audience had dispersed; see Tacitus <i epub:type="se:name.publication.book">Annals</i> 15.34. <a href="book-6.xhtml#noteref-621" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-622" epub:type="endnote">
-					<p>Literally, “full-packed,” <abbr>i.e.</abbr> full of sound, sonorous. <a href="book-6.xhtml#noteref-622" epub:type="backlink">↩</a></p>
+					<p>Literally, “full-packed,” <abbr class="initialism">i.e.</abbr> full of sound, sonorous. <a href="book-6.xhtml#noteref-622" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-623" epub:type="endnote">
 					<p>The first seems to have derived its name from the sound, which was like the humming of bees, the second and third from clapping with the hands rounded or hollowed, like roof-tiles, or flat, like bricks or flat tiles. <a href="book-6.xhtml#noteref-623" epub:type="backlink">↩</a></p>
@@ -2086,7 +2086,7 @@
 					<p>Referring to Nero’s design mentioned in <a href="book-6.xhtml#book-6-37-3">Nero, 37.3</a>. <a href="book-6.xhtml#noteref-692" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-693" epub:type="endnote">
-					<p>If the text is right, the remark must be of a general nature (“us” = mankind). Dio, 63.27, who reads <span xml:lang="grc">διαθρέψει</span>, says that Nero when planning to kill the senators, burn Rome, and sail to Alexandria, said: “Even though we be driven from our empire, yet this little artistic gift of ours shall support us there;” <abbr>i.e.</abbr> at Alexandria. <a href="book-6.xhtml#noteref-693" epub:type="backlink">↩</a></p>
+					<p>If the text is right, the remark must be of a general nature (“us” = mankind). Dio, 63.27, who reads <span xml:lang="grc">διαθρέψει</span>, says that Nero when planning to kill the senators, burn Rome, and sail to Alexandria, said: “Even though we be driven from our empire, yet this little artistic gift of ours shall support us there;” <abbr class="initialism">i.e.</abbr> at Alexandria. <a href="book-6.xhtml#noteref-693" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-694" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <a href="book-6.xhtml#book-6-7">Nero, 7.1</a>. <a href="book-6.xhtml#noteref-694" epub:type="backlink">↩</a></p>
